# tally-plugins

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml
cowork-plugin/: .mcp.json  mcp_config.json  plugin.json
cowork-plugin/skills/tally-doc-import/: SKILL.md
cowork-plugin/skills/tally-doc-import/references/: gst-and-ledgers.md  voucher-mapping.md
cowork-plugin/skills/tally-doc-import/scripts/: xlsx_to_csv.py
cowork-plugin/skills/tally-mind/: SKILL.md
demo/: README.md  generate_demo_docs.py
demo/bright-horizon-traders/: bank-statement-july-2026.xlsx  client-info.md
docs/superpowers/plans/: 2026-07-13-tallymind-mcp-server.md
docs/superpowers/specs/: 2026-07-13-tally-mcp-server-design.md
src/tallymind/: config.py  diagnostics.py  fuzzy.py  gateway.py  reports.py  server.py  state.py  writes.py  xml_requests.py
tests/: test_config.py  test_diagnostics.py  test_fuzzy.py  test_gateway.py  test_live_e2e.py  test_plugin_packaging.py  test_reports.py  test_server.py  test_state.py  test_writes.py  test_xml_requests.py
