[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tallymind"
version = "0.1.0"
description = "MCP server connecting TallyPrime to Claude via its HTTP/XML gateway."
authors = [{ name = "CA Shailesh S Wadhawaniya" }]
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
